installdir = $(pkglibdir)/python/Components/Renderer

install_PYTHON = \
	__init__.py Label.py Progress.py Listbox.py Renderer.py dmmVolumeText.py Pixmap.py \
	FixedLabel.py PositionGauge.py Canvas.py CiModuleControl.py Picon.py Pig.py \
	FrontpanelLed.py ChannelNumber.py VideoSize.py NextEpgInfo.py \
        PiconUni.py SingleEpgList.py TunerLabel.py Watches.py \
        dmmChannelNumber.py dmmMaxTemp.py dmmNextEvent.py dmmScrollLabel.py \
        dmmShowReference.py 
